deployment/openshift/apps/openshift/mcpgateway/mcp-context-forge-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mcp-context-forge
spec:
  to:
    kind: Service
    name: mcp-context-forge
    weight: 100
  port:
    targetPort: 4444
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
